# maliput_infrastructure-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  tracks.yaml
.github/: dependencies.repos
.github/workflows/: build.yml  maliput_full.yml  sanitizers.yml  scan_build.yml  workspace_build.yml
debian/: changelog  control  copyright  gbp.conf  rules
docker/: build.sh  run.sh
docker/focal/: Dockerfile  Dockerfile.nvidia
maliput_full/: CHANGELOG.rst  LICENSE  README.md  package.xml
maliput_full/repos/foxy/: maliput_full.repos
repos/foxy/: maliput_full.repos
repos_index/foxy/: delphyne.repos  maliput.repos
tools/: install_dependencies.sh  run_scan_build.py
